--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
 <h3>2018-Now, 21 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper is accepted by TMM 2022.</td></tr> 
-		<tr><td>One paper is accepted by AAAI 2022.</td></tr> 
-		<tr><td>One paper is accepted by ICCV 2021.</td></tr> 
-		<tr><td>One paper is accepted by ACM MM 2021.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
-		<tr><td>One paper is accepted by PR 2021.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
-		<tr><td>One paper is accepted by ICME 2021.</td></tr> 	
-		<tr><td>One paper is accepted by IEEE TCSVT 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE Access 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TNNLS 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TIP 2020.</td></tr> 	
-		<tr><td>Three papers are accepted by ICCV Workshop 2019.</td></tr> 
-		<tr><td>One paper is accepted by IET Image Processing 2019.</td></tr> 	
-		<tr><td>One paper is accepted by ICONIP 2018.</td></tr> 
-		<tr><td>One paper is accepted by ACCV 2018.</td></tr> 
-		<tr><td>One paper is accepted by ECCV 2018.</td></tr> 
-		<tr><td>One paper is accepted by CVPR Workshop 2018.</td></tr> 	
+		<tr><td>One paper is accepted by TMM, 2022.</td></tr> 
+		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
+		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
+		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
+		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
+		<tr><td>One paper is accepted by ICME, 2021.</td></tr> 	
+		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
+		<tr><td>Three papers are accepted by ICCV Workshop, 2019.</td></tr> 
+		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
+		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
+		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
+		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
+		<tr><td>One paper is accepted by CVPR Workshop, 2018.</td></tr> 	
 	</tbody>
 </table>
 
