--- a/index_zw.html
+++ b/index_zw.html
@@ -74,25 +74,25 @@
 <h3>2018-现在，共21篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 TMM 2022 接收.</td></tr> 
-		<tr><td>一篇论文已被 AAAI 2022 接收.</td></tr> 
-		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
-		<tr><td>一篇论文已被 ACM MM 2021 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
-		<tr><td>一篇论文已被 PR 2021 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
-		<tr><td>一篇论文已被 ICME 2021 接收.</td></tr> 	
-		<tr><td>一篇论文已被 IEEE TCSVT 2020 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM 2020 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE Access 2020 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TNNLS 2020 接收.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TIP 2020 接收.</td></tr> 	
-		<tr><td>三篇论文已被 ICCV Workshop 2019 接收.</td></tr> 
-		<tr><td>一篇论文已被 IET Image Processing 2019 接收.</td></tr> 	
-		<tr><td>一篇论文已被 ICONIP 2018 接收.</td></tr> 
-		<tr><td>一篇论文已被 ACCV 2018 接收.</td></tr> 
-		<tr><td>一篇论文已被 ECCV 2018 接收.</td></tr> 
-		<tr><td>一篇论文已被 CVPR Workshop 2018 接收.</td></tr> 	
+		<tr><td>一篇论文已被 TMM接收, 2022.</td></tr> 
+		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	
+		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
+		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
+		<tr><td>三篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
+		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
+		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
+		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
+		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
+		<tr><td>一篇论文已被 CVPR Workshop接收, 2018.</td></tr> 	
 	</tbody>
 </table>
 
