--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <h2>News</h2>
-<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</a></h3>
+<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
 <h3>2018-Now, 21 Papers</h3>
 <table style="border-spacing:2px">
@@ -154,7 +154,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 725] [Highest Citation: 392]</h2>
+<h2>Selected Publications [Total Citations: 727] [Highest Citation: 393]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
