--- a/index_zw.html
+++ b/index_zw.html
@@ -71,10 +71,12 @@
 
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，共21篇</h3>
+<h3>2018-现在，21篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 TMM接收, 2022.</td></tr> 
+		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
+		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2022.</i></td></tr> 	
+		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
@@ -87,12 +89,13 @@
 		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
-		<tr><td>三篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
+		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
+		<tr><td><i>一篇比赛报告已被 ICCV Workshop接收, 2019.</i></td></tr> 
 		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
 		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
-		<tr><td>一篇论文已被 CVPR Workshop接收, 2018.</td></tr> 	
+		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2018.</i></td></tr> 	
 	</tbody>
 </table>
 
@@ -150,7 +153,7 @@
 
 
 
-<h2>精选出版物 [总引用: 727] [最高引用: 393] </h2>
+<h2>精选出版物 [总引用: 728] [最高引用: 393] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -394,6 +397,21 @@
 <h4>比赛报告</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2022.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2022.<br>
+		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte
+		<font color="red">组织者</font><br>
+		<a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 
 	<tr>	
 		<td width="206">
