--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
 <h2>News</h2>
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 21 Papers</h3>
+<h3>2018-Now, 21 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper is accepted by TMM, 2022.</td></tr> 
+		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
+		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2022.</i></td></tr> 	
+		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
@@ -91,12 +93,13 @@
 		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
-		<tr><td>Three papers are accepted by ICCV Workshop, 2019.</td></tr> 
+		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
+		<tr><td><i>One challenge report is accepted by ICCV Workshop, 2019</i>.</td></tr> 
 		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
 		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
-		<tr><td>One paper is accepted by CVPR Workshop, 2018.</td></tr> 	
+		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2018.</i></td></tr> 	
 	</tbody>
 </table>
 
@@ -154,7 +157,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 727] [Highest Citation: 393]</h2>
+<h2>Selected Publications [Total Citations: 728] [Highest Citation: 393]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -397,9 +400,25 @@
 </tbody></table>
 
 
-<h4>Competition Reports</h4>
+<h4>challenge Reports</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2022.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2022.<br>
+		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte
+		<font color="red">Co-Organizer</font><br>
+		<a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/AIM2019.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -415,18 +434,18 @@
 	<tr></tr>
 
 	<tr>	
-			<td width="206">
-			<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-			</td>		
-			<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
-			<p><em>CVPR NTIRE</em>, 2018. <br>
-			<font color="red">The 6th place and Honorable Mention Award.</font><br>
-			<a href="paper/NTIRE2018.pdf", target="_blank">[Paper]</a>
-			</td>
-		</tr>
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
+		<td width="206">
+		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2018. <br>
+		<font color="red">The 6th place and Honorable Mention Award.</font><br>
+		<a href="paper/NTIRE2018.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	<tr></tr>
  </tbody></table>
 
 
