--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 728] [Highest Citation: 393]</h2>
+<h2>Selected Publications [Total Citations: 728] [Highest Citation: 393] #: Co-first authors  *: Corresponding author</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -274,12 +274,11 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation【New】</a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation【New】</a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">*Corresponding author. SCI-1.</font><br>
-		<a href="", target="_blank">[Paper]</a>
-		<a href="", target="_blank">[Code]</a>
+		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -287,27 +286,10 @@
 	<tr></tr>
 </tbody></table>
 
+
+
 <h4>Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
-		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
-		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">*Corresponding author.</font><br>
-		<font color="red">Top artificial intelligence conference.</font><br>
-		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
-		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
-        <a href="", target="_blank">[Code]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -344,23 +326,64 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
+
+
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
-		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang*.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">AIM2019 Winner</font><br> 
-		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation</a><br>
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng, and Guixu Zhang
+		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
+		<font color="red">NTIRE</font><br>
+		<a href="", target="_blank">[Paper]</a>
+        <a href="", target="_blank">[Poster]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Efficient Transformer for Single Image Super-Resolution</a><br>
+		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
+		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
+		<font color="red">NTIRE</font><br>
+		<a href="", target="_blank">[Paper]</a>
+        <a href="", target="_blank">[Poster]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
+		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
+		<font color="red">*Corresponding author.</font><br>
+		<font color="red">Top artificial intelligence conference.</font><br>
+		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
+		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
+        <a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+</tbody></table>
+
+
+
+<h4>Guided Papers</h4></table></table>
+<table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -397,10 +420,27 @@
     <tr></tr>
 	<tr></tr>
 
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
+		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang*.
+		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<font color="red">AIM2019 Winner</font><br> 
+		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 </tbody></table>
 
 
-<h4>challenge Reports</h4>
+<h4>Challenge Reports</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 
