--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 		</td>		
 		<td> <a href="" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
 		<p><em>CVPR NTIRE</em>, 2022.<br>
-		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte
+		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">Co-Organizer</font><br>
 		<a href="", target="_blank">[Paper]</a>
 		</td>
