--- a/index_zw.html
+++ b/index_zw.html
@@ -153,7 +153,8 @@
 
 
 
-<h2>精选出版物 [总引用: 728] [最高引用: 393] #：共同一作 *：通讯作者</h2>
+<h2>精选出版物 [总引用: 728] [最高引用: 393] </h2>
+<h2>#：共同一作 *：通讯作者</h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
