--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
 
 
 
-<h2>Selected Publications [Total Citations: 728] [Highest Citation: 393]</h2>
-<h2>#: Co-first authors  *: Corresponding author</h2>
+<h2>Selected Publications [Total Citations: 728] [Highest Citation: 393] <br>
+#: Co-first authors  *: Corresponding author</h2>
+
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
