--- a/index.html
+++ b/index.html
@@ -68,21 +68,22 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, and ACMMM. I received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, ACMMM, IJCAI. I received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
 <h2>News</h2>
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 21 Papers, 3 Challenge Reports</h3>
+<h3>2018-Now, 22 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>----------2022----------</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2022.</i></td></tr> 	
 		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
-		<br>
+		<tr><td>----------2021----------</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
@@ -90,17 +91,17 @@
 		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICME, 2021.</td></tr> 	
-		<br>
+		<tr><td>----------2020----------</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
-		<br>
+		<tr><td>----------2019----------</td></tr> 
 		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
 		<tr><td><i>One challenge report is accepted by ICCV Workshop, 2019</i>.</td></tr> 
 		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
-		<br>
+		<tr><td>----------2018----------</td></tr> 
 		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
@@ -404,7 +405,7 @@
 		</td>		
 		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
-		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI </b></i>), 2022. <br>
+		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">Top artificial intelligence conference.</font><br>
 		<a href="", target="_blank">[Paper]</a>
 		</td>
@@ -486,7 +487,7 @@
 		<p><em>CVPR NTIRE</em>, 2022.<br>
 		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">Co-Organizer</font><br>
-		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a><br>
+		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
