--- a/index_zw.html
+++ b/index_zw.html
@@ -64,21 +64,22 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20篇论文，包括 TNNLS、TIP、TCSVT、TMM、PR、ECCV、ICCV、AAAI、ACMMM。我获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括TIP、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个期刊会议审稿人。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20篇论文，包括 TNNLS、TIP、TCSVT、TMM、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括TIP、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个期刊会议审稿人。
 </p>
 
 <h2>最新消息</h2>
 
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，21篇论文，3篇比赛报告</h3>
+<h3>2018-现在，22篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>----------2022----------</td></tr> 
 		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
 		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2022.</i></td></tr> 	
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
-		<br>
+		<tr><td>----------2021----------</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
@@ -86,17 +87,17 @@
 		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	
-		<br>
+		<tr><td>----------2020----------</td></tr> 
 		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
-		<br>
+		<tr><td>----------2019----------</td></tr> 
 		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
 		<tr><td><i>一篇比赛报告已被 ICCV Workshop接收, 2019.</i></td></tr> 
 		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
-		<br>
+		<tr><td>----------2018----------</td></tr> 
 		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
@@ -395,7 +396,7 @@
 		</td>		
 		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
-		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI </b></i>), 2022. <br>
+		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会.</font><br>
 		<a href="", target="_blank">[论文]</a>
 		</td>
@@ -471,7 +472,7 @@
 		<p><em>CVPR NTIRE</em>, 2022.<br>
 		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">组织者</font><br>
-		<a href="paper/NTIRE2022.pdf", target="_blank">[论文]</a><br>
+		<a href="paper/NTIRE2022.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[主页]</a>
 		</td>
 	</tr>
