--- a/index_zw.html
+++ b/index_zw.html
@@ -133,7 +133,7 @@
 <ul>
 	<li>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021.07.05--现在</div>
-		职位: 博后研究员<br>
+		职位: <a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">博后研究员</a><br><br>
 		研究内容: 图像复原和MRI图像重建<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授和<a href="http://lokminglui.com/", target="_blank">雷乐铭</a> 教授<br>
 	</li>
