--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a><br>
-			Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
+		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>arXiv 2204.08696</em>, 2022.<br>
+		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
