--- a/index_zw.html
+++ b/index_zw.html
@@ -368,6 +368,7 @@
 		<font color="red">NTIRE</font><br>
 		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
 		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
+		<a href="projects/CVPRW_2022_ESRT", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
