--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 		<font color="red">NTIRE</font><br>
 		<a href="paper/ESRT.pdf", target="_blank">[Paper]</a>
 		<a href="paper/ESRT-supp.pdf", target="_blank">[Supp]</a>
-		<a href="projects/CVPRW_2022_ESRT", target="_blank">[Homepage]</a>
+		<a href="projects/ESRT", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
