--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 747] [Highest Citation: 397] </h2>
+<h2>Selected Publications [Total Citations: 749] [Highest Citation: 397] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>Preprint Papers</h4>
@@ -406,11 +406,12 @@
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
+		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">Top artificial intelligence conference.</font><br>
-		<a href="", target="_blank">[Paper]</a>
+		<a href="paper/IJCAI2022.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[Code]</a>
 		</td>
 	</tr>
 	<tr></tr>
