--- a/index_zw.html
+++ b/index_zw.html
@@ -159,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 747] [最高引用: 398] </h2>
+<h2>精选出版物 [总引用: 749] [最高引用: 397] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -397,11 +397,12 @@
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
+		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会.</font><br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/IJCAI2022.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[代码]</a>
 		</td>
 	</tr>
 </tbody></table>
