--- a/index.html
+++ b/index.html
@@ -567,32 +567,48 @@
 		</tbody>
 </table>
 
-<h3>Selected Reviewer</h3>
+<h3>Journal Reviewer</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE Transactions on Image Processing</td>
+			<td> IEEE Transactions on Image Processing (TIP)</td>
 		</tr>
 		<tr>
-			<td> IEEE Transactions on Multimedia</td>
+			<td> IEEE Transactions on Multimedia (TMM)</td>
 		</tr>
 		<tr>
-			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
+			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
-			<td> Information Science</td>
+			<td> Information Science (INS)</td>
 		</tr>
 		<tr>
-			<td> Pattern Recognition</td>
+			<td> Pattern Recognition (PR)</td>
 		</tr>
         <tr>
-			<td> Knowledge-Based Systems </td>
+			<td> Knowledge-Based Systems (KBS)</td>
 		</tr>
 		<tr>
-			<td> IEEE Signal Processing Letters </td>
+			<td> IEEE Signal Processing Letters (SPL)</td>
+	</tbody>
+</table>
+
+
+<h3>Conference Reviewer</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> New Trends in Image Restoration and Enhancement workshop
+				and challenges on image and video processing (NTIRE)</td>
 		</tr>
 		<tr>
-			<td> NTIRE/ ICME/ BMVC/ ICPR...</td>
+			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
+		</tr>
+		<tr>
+			<td> The British Machine Vision Conference (BMVC)</td>
+		</tr>
+		<tr>
+			<td>International Conference on Pattern Recognition (ICPR)</td>
 		</tr>
 	</tbody>
 </table>
