--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. 250 stars and 57 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. 250 stars and 57 forks in Github. [Citations: 400+]</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
