--- a/index_zw.html
+++ b/index_zw.html
@@ -532,7 +532,7 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">NTIRE, 2022.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022.</a></td>
 			</tr>
 		</tbody>
 </table>
@@ -722,7 +722,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2022-3
+&copy; 李俊诚 | 最后更新: 2022-5
 </center>
 </p>
 
