--- a/index_zw.html
+++ b/index_zw.html
@@ -330,7 +330,7 @@
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
 		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">口头报告论文（Oral）</font><br>
+		<font color="red">口头报告（Oral Presentation）</font><br>
 		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
@@ -400,9 +400,11 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
+		<font color="red">短报告 (Short Oral Presentation)</font><br>
 		<font color="red">人工智能顶会.</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[代码]</a>
+		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[主页]</a>
 		</td>
 	</tr>
 </tbody></table>
