--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
 <h2>Selected Publications [Total Citations: 770] [Highest Citation: 404] </h2>
-<h3>#：共同一作 *：通讯作者</h3>
+<h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
