--- a/index.html
+++ b/index.html
@@ -78,34 +78,31 @@
 <h3>2018-Now, 22 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>----------2022----------</td></tr> 
+		<tr><td>------Postdoctoral------</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
-		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2022.</i></td></tr> 	
+		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
 		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
-		<tr><td>----------2021----------</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
+		<tr><td>----------PhD----------</td></tr> 
 		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICME, 2021.</td></tr> 	
-		<tr><td>----------2020----------</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
-		<tr><td>----------2019----------</td></tr> 
 		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
-		<tr><td><i>One challenge report is accepted by ICCV Workshop, 2019</i>.</td></tr> 
+		<tr><td>One challenge report is accepted by ICCV Workshop, 2019.</td></tr> 
 		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
-		<tr><td>----------2018----------</td></tr> 
 		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
-		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2018.</i></td></tr> 	
+		<tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	
 	</tbody>
 </table>
 
