--- a/index_zw.html
+++ b/index_zw.html
@@ -74,34 +74,31 @@
 <h3>2018-现在，22篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>----------2022----------</td></tr> 
+		<tr><td>----------博后期间----------</td></tr> 
 		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
-		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2022.</i></td></tr> 	
+		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
-		<tr><td>----------2021----------</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
+		<tr><td>----------博士期间----------</td></tr> 
 		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	
-		<tr><td>----------2020----------</td></tr> 
 		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
-		<tr><td>----------2019----------</td></tr> 
 		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
-		<tr><td><i>一篇比赛报告已被 ICCV Workshop接收, 2019.</i></td></tr> 
+		<tr><td>一篇比赛报告已被 ICCV Workshop接收, 2019.</td></tr> 
 		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
-		<tr><td>----------2018----------</td></tr> 
 		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
-		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2018.</i></td></tr> 	
+		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	
 	</tbody>
 </table>
 
