--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
 
 
-<h4>Guided Papers</h4></table></table>
+<h4>Workshop Papers</h4></table></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
