--- a/index_zw.html
+++ b/index_zw.html
@@ -404,7 +404,7 @@
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
 		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[项目主页]</a>
+		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
