--- a/index_zw.html
+++ b/index_zw.html
@@ -642,7 +642,7 @@
 				<img src="./reports/ICCV.png" width="100" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
-				<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>).<br>
+				<p><em>IEEE International Conference on Computer Vision Workshop</em> (<i><b>ICCVW</b></i>).<br>
 				首尔, 韩国, 2019.11.02.<br>
 				<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[PPT]</a>
 			</td>
