--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
+		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
@@ -245,7 +245,7 @@
 		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
+		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
